# Synrix-Memory-Engine

./: .gitignore  CHANGELOG.md  FIX_APPLIED_OK_INDEXING.md  GITHUB_SETUP.md  LICENSE  Makefile  NEXT_STEPS.md  OK_INDEXING_FIX_VERIFIED.md  README.md  README_AGENT_FIRST.md
agent-memory-sdk/: README.md
synrix-windows-build/: AI_AGENT_USABILITY.md  AI_AGENT_USE_CASES.md  ALIGNMENT_JOSEPH_BACKEND.md  BENCHMARK_RESULTS.md  BENCHMARK_RESULTS_WINDOWS.txt  BENCHMARK_SUMMARY.md  BUILD.md  BUILD_CLI.md  BUILD_FREE_TIER_QUICK.md  BUILD_FREE_TIER_README.md  BUILD_GUIDE.md  CLI_READY.md  CMakeLists.txt  CMakeLists.txt.free_tier  CROSS_LATTICE_USAGE_GAP.md  DEMO_SCRIPT.md  FILES_FOR_JOSEPH_LIST.txt  FOR_JOSEPH_ACTIVATE_LICENSE.md  FOR_JOSEPH_PACK.md  INTEGRATION_TEST_RESULTS.md  LICENSE_ONE_TIME_KEYS.md  NATIVE_LOADER_RESOLVED.md  PERFORMANCE_TUNING.md  PLATFORM_ABSTRACTION.md  PRE_PROD_CHECKLIST.md  PRE_PROD_FINAL_CHECK.md  PROGRESS_SUMMARY_JOSEPH.md  QUICK_REFERENCE_JOSEPH.md  QUICK_STORE.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  RESPONSE_TO_CRITIQUE.md  RESPONSE_TO_JOSEPH.md  SDK_STANDARD_USAGE_REPORTING.md  SUMMARY_FOR_JOSEPH.md  SYNRIX_AI_TECH_SPEC.md  TEST_NOW.md  TRANSFER_COMMANDS.md  USAGE_REPORT_FOR_JOSEPH.md  (+63 more)
synrix-windows-build/docs/: WINDOWS_LINUX_ALIGNMENT.md
synrix-windows-build/include/: advanced_indexing.h  checksum.h  cluster_persistence.h  dynamic_lattice_loader.h  export.h  integrity_validator.h  lattice_corruption_repair.h  optimized_vector_indexing.h  persistent_lattice.h  semantic_index.h  semantic_vector_indexing.h  unified_indexing_system.h  wal.h
synrix-windows-build/python-sdk/: README.md  pyproject.toml
synrix-windows-build/python-sdk/examples/: BASELINE_EXPLANATION.md  DEMO_AUDIT_REPORT.md  DEMO_CLARIFICATION.md  DEMO_SCRIPT.md  DROP_IN_CHECKLIST.md  DROP_IN_DEMO_README.md  FINAL_AUDIT_SUMMARY.md  INFRASTRUCTURE_DEMO.md  INTEGRATION_EXAMPLE.py  MIGRATION_GUIDE.md  MONDAY_DEMO_README.md  MORPHOS_DEMO_COMPLETE.md  MORPHOS_DEMO_README.md  NVME_SETUP_COMPLETE.md  PRESENTER_SCRIPT.md  QUICK_START_MORPHOS.md  QUICK_START_RECORDING.sh  README.md  README_DEMO.md  README_MOCK_CUSTOMER.md  READY_TO_RECORD.md  RECORDING_CHECKLIST.md  RECORDING_GUIDE.md  RUN_IMPROVED_TEST.sh  RUN_PHASE1_TEST.sh  STORAGE_FORMATS_EXAMPLE.py  STRATEGY_ALIGNMENT.md  SYNRIX_VS_LLM_ALONE.md  VC_DEMO_AUDIT_FIXES.md  VC_DEMO_README.md  activate_env.sh  agent_benchmark.py  agent_demo.py  agent_demo_REAL.py  agent_demo_devin.py  agent_demo_devin_real.py  agent_demo_real_server.py  agent_demo_with_persistence.py  ai_agent_synrix_demo.py  benchmark_synrix.py  (+54 more)
synrix-windows-build/python-sdk/synrix/: _native.py  raw_backend.py
synrix-windows-build/src/: advanced_indexing.c  checksum.c  cluster_persistence.c  hierarchical_benchmark.c  intelligent_lattice_loader.c  isolation.c  lattice_constraints.c  lattice_dump.c  lattice_query_work.c  namespace_isolation.c  optimized_inverted_index.c  optimized_vector_benchmark.c  orchestrator_epistemology.c  semantic_aging.c  semantic_index.c  seqlock.c  specialized_benchmark.c  symbolic_compression_integration.c  unified_indexing_benchmark.c
synrix-windows-build/synrix_free_tier_100k/: README.md  START_HERE.md  create_installer_exe.py  installer.py  setup.py
synrix-windows-build/synrix_free_tier_100k/synrix/: raw_backend.py
synrix-windows-build/synrix_free_tier_50k/: AI_AGENT_GUIDE.md  DEBUG_OUTPUT.md  DELIVERY_NOTES.md  DEVELOPER_BUILD_GUIDE.md  DEVELOPER_PACKAGE_README.md  FINAL_CHECKLIST.md  FOR_JOSEPH.md  INSTALL.md  INSTALLER_README.md  INSTALL_FOR_JOSEPH.md  PACKAGE_INFO.md  PACKAGE_SUMMARY.md  QUICK_START.md  README.md  README_FOR_COFOUNDER.md  SECURITY.md  SECURITY_NOTES.md  SECURITY_SUMMARY.md  START_HERE.md  installer.bat  setup.py
synrix-windows-build/synrix_unlimited/: CURSOR_FIX.md  USAGE_GUIDE.md  WHERE_AM_I.md  check_dll_dependencies.py  deep_diagnostic.py  installer_v2.py
(+149 files in other folders)
